--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -11,6 +11,6 @@ vich_uploader:
         logo_images:
           uri_prefix: /uploads/logo
           upload_destination: '%kernel.project_dir%/public/uploads/logo'
-          namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
+          namer: App\Vich\LogoNamer
           delete_on_update: true
           delete_on_remove: true
